apps/skein_compiler/test/skein/conformance/negative/non_exhaustive_bool.skein
-- expect: E0021
-- #261: a non-exhaustive Bool match (missing an arm, no wildcard) is an error.
module NonExhaustiveBool {
  fn run(b: Bool) -> String {
    match b {
      true -> "yes"
    }
  }
}
